--- a/css/change-password.css
+++ b/css/change-password.css
@@ -1,5 +1,5 @@
 html {
-    font-size: 16px;
+  font-size: 16px;
 }
 
 body,
@@ -28,114 +28,101 @@ body {
 }
 
 .password-card {
-    background: var(--color-white);
-    width: 410px;
-    height: 474px;
-    min-height: 418px;
-    border-radius: 20px;
-    display: flex;
-    flex-direction: column;
-  }
-  
-  .password-title {
-    width: 362px;
-    height: 30px;
-    margin: 2.5rem auto 1rem;
-  }
-  
-  .password-title h3 {
-    text-align: center;
-    color: var(--color-main);
-    font-size: 1.375rem;
-    font-weight: 600;
-    line-height: 30px;
-  }
+  background: var(--color-white);
+  width: 410px;
+  min-height: 338px;
+  border-radius: 20px;
+  display: flex;
+  flex-direction: column;
+  padding: 40px 24px;
+  margin: auto;
+}
 
-  .inputs-container {
-    display: flex;
-    flex-direction: column;
-    width: 362px;
-    min-height: 228px;
-    height: 260px;
-    margin-left: auto;
-    margin-right: auto;
-    margin-bottom: 1rem;
-  }
-  
-  .error-message {
-    font-size: 1rem;
-    height: 1.5rem;
-    color: var(--color-dangerous);
-    font-weight: 400;
-    margin-bottom: 8px;
-    max-width: 362px;
-    text-align: center;
-    line-height: 24px;
-    margin-left: auto;
-    margin-right: auto;
+.password-title {
+  width: 362px;
+  margin-bottom: 1rem;
+}
 
-  }
-  
-  .error-input input {
-    border: 1.5px solid var(--color-dangerous);
-  }
+.password-title h3 {
+  text-align: center;
+  color: var(--color-main);
+  font-size: 1.375rem;
+  font-weight: 600;
+}
 
-  .password-form {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-  }
-  
-  .password-input {
-    margin-bottom: 8px;
-  }
-  
-  .password-input input {
-    width: 362px;
-    height: 48px;
-    padding: 0 1.5rem;
-    font-size: 1rem;
-    border-radius: var(--radius-M);
-    border: 1px solid transparent;
-    background-color: var(--color-dark-white);
-    color: var(--color-light-black);
-  }
-  
-  .password-input input::placeholder {
-    color: var(--color-gray);
-  }
-  
-  .password-input input:focus {
-    border: 1px solid var(--color-main);
-    outline: none;
-  }
-  
-  .password-note {
-    width: 362px;
-    font-size: 0.75rem;
-    color: var(--color-light-gray);
-    margin: 0rem auto;
-    text-align: center;
-    line-height: 1.25rem;
-  }
-  
-  .submit-button {
-    width: 362px;
-    height: 3rem;
-    border-radius: var(--radius-M);
-    background-color: var(--color-main);
-    color: var(--color-white);
-    font-weight: 600;
-    font-size: 1.125rem;
-    margin-bottom: 4rem;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    margin-left: auto;
-    margin-right: auto;
-  }
-  
-  .submit-button:hover {
-    background-color: #1d3f8e;
-  }
-  
+.inputs-container {
+  display: flex;
+  flex-direction: column;
+  width: 362px;
+  margin-left: auto;
+  margin-right: auto;
+  margin-bottom: 1rem;
+}
+
+.password-input {
+  margin-bottom: 8px;
+}
+
+.password-input input {
+  width: 362px;
+  height: 48px;
+  padding: 0 1.5rem;
+  border-radius: var(--radius-M);
+  border: 1px solid transparent;
+  background-color: var(--color-dark-white);
+  color: var(--color-light-black);
+  transition: border-color 0.2s ease;
+}
+
+.password-input input::placeholder {
+  color: var(--color-gray);
+}
+
+.password-input input:focus {
+  border: 1px solid var(--color-main);
+  outline: none;
+}
+
+/*  Красная обводка */
+.inputs-error input {
+  border: 1px solid var(--color-dangerous);
+  background-color: var(--color-white);
+}
+
+.error-message {
+  height: 1.5rem;
+  color: var(--color-dangerous);
+  font-weight: 400;
+  margin-bottom: 8px;
+  max-width: 362px;
+  text-align: center;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.password-note {
+  width: 362px;
+  font-size: 0.75rem;
+  color: var(--color-light-gray);
+  text-align: center;
+  margin: 0 auto;
+}
+
+.submit-button {
+  width: 362px;
+  height: 3rem;
+  border-radius: var(--radius-M);
+  background-color: var(--color-main);
+  color: var(--color-white);
+  font-weight: 600;
+  font-size: 1.125rem;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.submit-button:hover {
+  background-color: #1d3f8e;
+}
