--- a/css/edit-info.css
+++ b/css/edit-info.css
@@ -5,7 +5,6 @@ html {
 body,
 * {
   font-family: 'Montserrat', sans-serif;
-  font-size: 1rem;
   font-weight: 400;
   text-decoration: none;
   border: none;
@@ -35,29 +34,10 @@ html,
     height: 100%;
 }
 
-
-/* Добавим стили именно для карточки профиля */
-:root {
-    --color-main: #254ca9;
-    --color-dangerous: #ef302b;
-    --color-gray: #666666;
-    --color-light-gray: #8b96a6;
-    --color-light-black: #333333;
-    --color-dark-white: #f6f6f6;
-    --color-white: #ffffff;
-  
-    --radius-S: 12px;
-    --radius-M: 16px;
-    --radius-L: 24px;
-    --radius-XL: 32px;
-  
-    --transition: all 0.2s ease-in-out;
-  }
   
   h3 {
     font-weight: 600;
     font-size: 1.375rem;
-    line-height: 30px;
     text-align: center;
     color: var(--color-main);
     font-family: 'Montserrat', sans-serif;
@@ -67,11 +47,13 @@ html,
   .edit-card {
     background: var(--color-white);
     width: 410px;
-    min-height: 380px;
+    min-height: 300px;
     border-radius: 20px;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
+    padding: 40px 24px;
+    margin: auto;
   }
   
   /* Контейнер с заголовком */
@@ -79,13 +61,11 @@ html,
     width: 362px;
     height: 60px;
     margin-bottom: 1rem;
-    margin-top: 2.5rem;
     margin-left: auto;
     margin-right: auto;
   }
   .title h3 {
     width: 362px;
-    line-height: 30px;
     text-align: center;
 }
   
@@ -94,7 +74,7 @@ html,
     flex-direction: column;
     width: 362px;
     min-height: 184px;
-    height: 184px;
+    height: 188px;
     margin-bottom:16px ;
     margin-left: auto;
     margin-right: auto;
@@ -110,7 +90,6 @@ html,
     width: 362px;
     height: 48px;
     padding: 0 1.5rem;
-    font-size: 1rem;
     border-radius: var(--radius-M);
     border: 1px solid transparent;
     background-color: var(--color-dark-white);
@@ -139,11 +118,9 @@ html,
     font-size: 0.75rem;
     color: var(--color-dangerous);
     margin-top: 0.5rem;
-    margin-bottom: 0.5rem;
     width: 250px;
     height: 20px;
     font-weight: 400;
-    line-height: 20px;
     text-align: left;
   }
   
@@ -156,7 +133,6 @@ html,
     color: var(--color-white);
     font-weight: 600;
     font-size: 1.125rem;
-    margin-bottom: 2.5rem;
     display: flex;
     align-items: center;
     justify-content: center;
