--- a/css/change-password.css
+++ b/css/change-password.css
@@ -24,14 +24,14 @@ body {
   align-items: center;
   justify-content: center;
   height: 100vh;
-  background-color: #808080 !important;
+  background-color: #808080;
 }
 
 .password-card {
   background: var(--color-white);
   width: 410px;
   min-height: 338px;
-  border-radius: 20px;
+  border-radius: var(--radius-XXL);
   display: flex;
   flex-direction: column;
   padding: 40px 24px;
@@ -39,7 +39,7 @@ body {
 }
 
 .password-title {
-  width: 362px;
+  width: 100%;
   margin-bottom: 1rem;
 }
 
@@ -53,7 +53,7 @@ body {
 .inputs-container {
   display: flex;
   flex-direction: column;
-  width: 362px;
+  width: 100%;
   margin-left: auto;
   margin-right: auto;
   margin-bottom: 1rem;
@@ -64,14 +64,14 @@ body {
 }
 
 .password-input input {
-  width: 362px;
+  width: 100%;
   height: 48px;
   padding: 0 1.5rem;
   border-radius: var(--radius-M);
   border: 1px solid transparent;
   background-color: var(--color-dark-white);
   color: var(--color-light-black);
-  transition: border-color 0.2s ease;
+  transition: var(--transition);
 }
 
 .password-input input::placeholder {
@@ -86,7 +86,6 @@ body {
 /*  Красная обводка */
 .inputs-error input {
   border: 1px solid var(--color-dangerous);
-  background-color: var(--color-white);
 }
 
 .error-message {
@@ -101,7 +100,7 @@ body {
 }
 
 .password-note {
-  width: 362px;
+  width: 100%;
   font-size: 0.75rem;
   color: var(--color-light-gray);
   text-align: center;
@@ -109,7 +108,7 @@ body {
 }
 
 .submit-button {
-  width: 362px;
+  width: 100%;
   height: 3rem;
   border-radius: var(--radius-M);
   background-color: var(--color-main);
@@ -119,10 +118,4 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
-  margin-left: auto;
-  margin-right: auto;
-}
-
-.submit-button:hover {
-  background-color: #1d3f8e;
 }
