--- a/css/edit-info.css
+++ b/css/edit-info.css
@@ -22,7 +22,7 @@ body {
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  background-color: #808080 !important;
+  background-color: #808080;
 }
 button {
     cursor: pointer;
@@ -48,7 +48,7 @@ html,
     background: var(--color-white);
     width: 410px;
     min-height: 300px;
-    border-radius: 20px;
+    border-radius: var(--radius-XXL);
     display: flex;
     flex-direction: column;
     justify-content: space-between;
@@ -58,23 +58,23 @@ html,
   
   /* Контейнер с заголовком */
   .title {
-    width: 362px;
-    height: 60px;
+    width: 100%;
     margin-bottom: 1rem;
     margin-left: auto;
     margin-right: auto;
   }
   .title h3 {
-    width: 362px;
+    width: 100%;
     text-align: center;
 }
   
   .inputs-container {
     display: flex;
     flex-direction: column;
-    width: 362px;
-    min-height: 184px;
+    font-size: 1rem;
+    width: 100%;
     height: 188px;
+    min-height: 184px;
     margin-bottom:16px ;
     margin-left: auto;
     margin-right: auto;
@@ -87,7 +87,7 @@ html,
   }
   
   input {
-    width: 362px;
+    width: 100%;
     height: 48px;
     padding: 0 1.5rem;
     border-radius: var(--radius-M);
@@ -107,10 +107,10 @@ html,
   
   /* Состояние ошибки */
   .inputs-error input {
-    border: 1.5px solid var(--color-dangerous);
+    border: 1px solid var(--color-dangerous);
   }
   .inputs-error{
-    width: 362px;
+    width: 100%;
     height: 76px;
   }
   
@@ -118,15 +118,15 @@ html,
     font-size: 0.75rem;
     color: var(--color-dangerous);
     margin-top: 0.5rem;
-    width: 250px;
+    width: 100%;
     height: 20px;
     font-weight: 400;
     text-align: left;
   }
   
   /* Кнопка */
-.submit-button {
-    width: 362px;
+  .submit-button {
+    width: 100%;
     height: 3rem;
     border-radius: var(--radius-M);
     background-color: var(--color-main);
@@ -136,10 +136,5 @@ html,
     display: flex;
     align-items: center;
     justify-content: center;
-    margin-left: auto;
-    margin-right: auto;
   }
   
-  .submit-button:hover {
-    background-color: #1d3f8e;
-  }
