--- a/css/style.css
+++ b/css/style.css
@@ -32,10 +32,10 @@ button {
 
 .profile-card {
     min-height: 380px;
-    background: #ffffff;
+    background: var(--color-white);
+    color: var(--color-main);
     width: 410px;
-    height: 380px;
-    border-radius: 20px;
+    border-radius: var(--radius-XXL);
     text-align: center;
     display: flex;
     flex-direction: column;
@@ -48,13 +48,11 @@ button {
     display: flex;
     align-items: center;
     gap: 16px;
-    width: 362px;
-    height: 52px;
+    width: 100%;
   }
 
 .user-info{
-    width: 362px;
-    height: 52px;
+    width: 100%;
     text-align: left;
     
 }
@@ -67,21 +65,20 @@ button {
 .user-name{
     font-weight: 600;
     font-size: 18px;
-    color: #254CA9;
+    color: var(--color-main);
     margin-bottom: 2px;
 }
 .stick{
     margin-top: 12px;
-    width: 362px;
+    width: 100%;
     height: 2px;
     border-radius: 2px;
-    background-color: #f6f6f6;
+    background-color: var(--color-dark-white);
 }
 .profile-actions {
     display: flex;
     flex-direction: column;
-    width: 362px;
-    height: 168px;
+    width: 100%;
     margin-top: 8px;
     margin-bottom: 8px;
     margin-left: auto;
@@ -91,14 +88,14 @@ button {
 .profile-actions a {
     display: flex;
     align-items: center;
-    width: 362px;
+    width: 100%;
     height: 56px;
     gap: 12px;
     background: none;
-    color: #666666;
+    color: var(--color-gray);
     text-align: left;
-    border-radius: 10px;
-    transition: background 0.3s;
+    border-radius: var(--radius-XL);
+    transition: var(--transition);
     cursor: pointer;
   }
 
@@ -109,19 +106,20 @@ button {
 }
 
 .profile-actions a:hover {
-    background: #f6f6f6;
+    background: var(--color-dark-white);
+
 }
 
 .logout-button {
-    background: #f6f6f6;
-    color: #254CA9;
-    width: 362px;
-    height: 48px;
-    border-radius: 10px;
+    background: var(--color-dark-white);
+    color: var(--color-main);
+    width: 100%;
+    font-size: 600;
+    border-radius: var(--radius-M);
     padding: 10px;
     font-size: 18px;
     margin-top: auto;
-    transition: background 0.3s;
+    transition: var(--transition);
     padding-top: 11px;
     padding-right: 24px;
     padding-bottom: 11px;
@@ -129,14 +127,14 @@ button {
 }
 
 .logout-button:hover {
-    background: #254CA9;
-    color: #ffff;
+    background: var(--color-main);
+    color: var(--color-white);
 }
 
 .user-icon {
     width: 36px;
     height: 36px;
-    border-radius: 50%;
-    background-color: #f6f6f6;
+    border-radius: 100px;
+    background-color: var(--color-dark-white);
     padding: 6px;
 }
