Делает небольшие доработки

--- a/css/change-password.css
+++ b/css/change-password.css
@@ -54,8 +54,6 @@ body {
   display: flex;
   flex-direction: column;
   width: 100%;
-  margin-left: auto;
-  margin-right: auto;
   margin-bottom: 1rem;
 }
 
@@ -89,14 +87,11 @@ body {
 }
 
 .error-message {
-  height: 1.5rem;
   color: var(--color-dangerous);
   font-weight: 400;
   margin-bottom: 8px;
   max-width: 362px;
   text-align: center;
-  margin-left: auto;
-  margin-right: auto;
 }
 
 .password-note {
@@ -106,6 +101,10 @@ body {
   text-align: center;
   margin: 0 auto;
 }
+button {
+  cursor: pointer;
+}
+
 
 .submit-button {
   width: 100%;
