--- a/css/edit-info.css
+++ b/css/edit-info.css
@@ -60,8 +60,6 @@ html,
   .title {
     width: 100%;
     margin-bottom: 1rem;
-    margin-left: auto;
-    margin-right: auto;
   }
   .title h3 {
     width: 100%;
@@ -75,9 +73,7 @@ html,
     width: 100%;
     height: 188px;
     min-height: 184px;
-    margin-bottom:16px ;
-    margin-left: auto;
-    margin-right: auto;
+    margin-bottom: 16px;
   }
   
   .inputs-element {
@@ -89,6 +85,7 @@ html,
   input {
     width: 100%;
     height: 48px;
+    font-size: 1rem;
     padding: 0 1.5rem;
     border-radius: var(--radius-M);
     border: 1px solid transparent;
