--- a/css/discipline-page.css
+++ b/css/discipline-page.css
@@ -77,7 +77,7 @@ body {
 .main {
   max-width: 1824px;
   margin: 0 auto;
-  padding: 29px 48px 10px;
+  padding: 29px 0 10px;
   flex-grow: 1;
 }
 
@@ -91,11 +91,10 @@ body {
   padding: 24px 0;
   margin-bottom: 24px;
 }
-
-.card-teachers{
+.card-{
   background: var(--color-dark-white);
   border-radius: var(--radius-L);
-  padding: 24px 24px 32px 24px;
+  padding: 24px 24px 32px;
 }
 
 .discipline-name .card-header {
@@ -255,7 +254,7 @@ body {
 }
 
 /* Поворот стрелки при открытии */
-details[open] .toggle-btn img {
+details[open] .toggle-button img {
   transform: rotate(180deg);
 }
 
@@ -265,13 +264,6 @@ details[open] .toggle-btn img {
   color: var(--color-gray);
   margin-left: 32px;
   margin-bottom: 16px;
-}
-
-.card-description{
-  background: var(--color-dark-white);
-  border-radius: var(--radius-L);
-  padding: 24px;
-  margin-bottom: 24px;
 }
 
 .last-updated {
@@ -311,4 +303,11 @@ details[open] .toggle-btn img {
   color: var(--color-light-blue);
   font-weight: 600;
   font-size: 18px;
+}
+
+@media (min-width: 1838px) {
+  .footer .header {
+    padding-left: calc((100% - 1838px) / 2);
+    padding-right: calc((100% - 1838px) / 2);
+  }
 }
