--- a/css/discipline-page.css
+++ b/css/discipline-page.css
@@ -53,6 +53,9 @@ body {
   --transition: all 0.2s ease-in-out;
 }
 
+button {
+    cursor: pointer;
+}
 .header {
   padding: 8px 41px;
   border-bottom: 1px solid var(--color-dark-white);
@@ -294,7 +297,7 @@ details[open] .toggle-button img {
 .reviews-section {
   background: var(--color-white);
   border-radius: var(--radius-M);
-  padding: 0 24px 24px;
+  padding: 0 0 24px;
 }
 
 .reviews-section .review-card:last-child {
@@ -305,6 +308,7 @@ details[open] .toggle-button img {
   display: flex;
   align-items: center;
   margin-bottom: 24px;
+  margin-left: 32px;
 }
 
 .reviews-count {
@@ -435,9 +439,7 @@ details[open] .toggle-button img {
   gap: 16px;
   cursor: pointer;
 }
-.heart{
-  fill: var(--color-main);
-}
+
 
 .footer {
   display: flex;
