--- a/css/reviews-page.css
+++ b/css/reviews-page.css
@@ -101,7 +101,7 @@ main{
     vertical-align: middle;
 
 }
-.rating-label{
+.rating-p{
     font-weight: 600;
     font-size: 24px;
     color: var(--color-main);
@@ -130,18 +130,18 @@ main{
   align-items: center;
   gap: 32px;
 }
-.sort-form .label{
+.sort-form .p{
     font-weight: 600;
     font-size: 18px;
     margin-right: 16px;
 }
 
-.sort-label {
+.sort-p {
   font-weight: 600;
   font-size: 22px;
   color: var(--color-light-black);
 }
-.sort-label:first-child{
+.sort-p:first-child{
   margin: 0;
 }
 
